--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
                 {% if current_user.is_authenticated %}
                     <a href="/">{{current_user.username}}</a> •
                     <a href="/users">users</a> •
+                    <a href="/dialogs">dialogs</a> •
                     <a href="/logout">logout</a>
                 {% endif %}
             </div>
