--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -11,7 +11,7 @@
             document.getElementById("users").innerHTML += 
             `
             <div>
-            <a href="/dialogwith/`+users[i].id+`">`
+            <a href="/user/`+users[i].id+`">`
             +twemoji.parse(String.fromCodePoint(users[i].emoji))+users[i].username+`
             </a>
             </div>
