--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="{{url_for('static', filename='css.css')}}"/>
+    <script src="{{url_for('static', filename='js.js')}}"></script>
     <script src="//twemoji.maxcdn.com/2/twemoji.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
