--- a/app/templates/dialogs.html
+++ b/app/templates/dialogs.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-<style type="text/css">
-    .message {
-        border : 1px solid white;
-    }
-    .message:hover {
-        transform : scale(1.05);
-        background : white;
-        border : 1px solid #aaa;
-    }
-</style>
-<div>
+
+<div id="dialogs" style="width : 700px; text-align : left;">
 </div>
+
+<script type="text/javascript">
+    var dialogs = {{dialogs|tojson|safe}};
+    window.onload = function(){
+        for (var i in dialogs){
+            document.getElementById('dialogs').appendChild(printdialog(dialogs[i]));
+        }
+    };
+</script>
+
 {% endblock %}
