--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,7 @@
                     <a href="/">{{current_user.username}}</a> •
                     <a href="/users">users</a> •
                     <a href="/dialogs">dialogs</a> •
+                    <a href="/email">email</a> •
                     <a href="/logout">logout</a>
                 {% endif %}
             </div>
