--- a/app/templates/dialogwith.html
+++ b/app/templates/dialogwith.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
+<div>
+    Conversation with {{user.username}} 
+</div>
+<hr>
 
 <div id="messagesScroll" style=" height : 500px; overflow-y : scroll;">
     <div id="messages" style="width : 700px; text-align : left;"></div>
